--- a/ang/package.json
+++ b/ang/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
