--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.2",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "pg": "^7.4.1"
   },
   "devDependencies": {
