--- a/ang/package.json
+++ b/ang/package.json
@@ -25,8 +25,11 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ng2-carouselamos": "^3.2.0",
     "ng2-file-upload": "^1.3.0",
+    "primeng": "^5.2.0-rc.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
