--- a/ang/package.json
+++ b/ang/package.json
@@ -31,6 +31,7 @@
     "ng2-file-upload": "^1.3.0",
     "primeng": "^5.2.0-rc.1",
     "rxjs": "^5.5.2",
+    "web3": "^0.20.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
