--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "web3": "^1.0.0-beta.29"
   },
   "devDependencies": {
     "chai": "^4.1.2",
