--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "keythereum": "^1.0.2",
     "knex": "^0.14.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
