--- a/ang/package.json
+++ b/ang/package.json
@@ -29,6 +29,8 @@
     "jquery": "^3.2.1",
     "ng2-carouselamos": "^3.2.0",
     "ng2-file-upload": "^1.3.0",
+    "ng2-page-scroll": "^4.0.0-beta.12",
+    "ng2-scroll-to": "^1.0.7",
     "primeng": "^5.2.0-rc.1",
     "rxjs": "^5.5.2",
     "web3": "^0.20.4",
